# frost

./: .gitignore  Cargo.toml  README.md
src/: autocomplete.rs  autosave.rs  batch_generator.rs  batch_mode.rs  config.rs  db_navigator.rs  db_tree.rs  downloads_folder.rs  editor.rs  lib.rs  locked_file.rs  main.rs  palette.rs  results.rs  results_export.rs  results_selection.rs  schema_cache.rs  syntax.rs  workspace.rs
