[package]
name = "Frost"
version = "0.1.0"
edition = "2021"
default-run = "Frost"

# Default binary (your IDE)
[[bin]]
name = "Frost"
path = "src/main.rs"

# Crawler daemon binary
[[bin]]
name = "Frost-crawler"
path = "src/bin/crawler.rs"

[dependencies]
ctrlc = { version = "3.4", features = ["termination"] } 
tui = { version = "0.19", features = ["crossterm"] }
crossterm = "0.29"
odbc = "0.17"
odbc-sys = "0.25"
anyhow = "1.0"
unicode-segmentation = "1"
copypasta = "0.10"
tokio = { version = "1", features = ["full"] }
directories = "5"
tempfile = "3"
lru = "0.12"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
byteorder = "1.5"
regex      = "1"
windows   = { version = "0.54", features = ["Win32_Foundation", "Win32_System_Console","Win32_Graphics_Gdi"] }
windows-sys  = { version = "0.52", features = ["Win32_System_Console", "Win32_Graphics_Gdi", "Win32_Foundation"] }
signal-hook = { version = "0.3", features = ["iterator"] }  
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
rust_xlsxwriter = "0.79"
rayon = "1.7"
num_cpus = "1.8"

rusqlite = { version = "0.30", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
fs2 = "0.4"
libc = "0.2"

[profile.dev.package."*"]
opt-level = 3

